--- a/Designs/index.html
+++ b/Designs/index.html
@@ -7,6 +7,27 @@
     <title>Shopping List</title>    
   </head>
 <body>
+  
+  <h1>Account Log in</h1>
+
+	<form action="new-user.php" style="border:1px solid">
+
+		<div class="container">
+			
+  			
+			<label><b>Email</b></label><br>
+			<input type="text" name="email" value="Enter email" required>
+  			<br>  			
+			<label><b>Password</b></label><br>
+			<input type="password" name="password" value="Enter Password" required>
+			<br>    			
+			<br>
+  			<input type="button" value="Log in">
+			<p>New user?<a href="#">create_account</a>.</p>
+		</div>
+	</form> 
+
+	<body>	
 
 </body>
 </html>
